# witr-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/adapters/: boot.rs  cmdline.rs  fd.rs  filecontext.rs  mod.rs  resource.rs  socketstate.rs  system.rs  user.rs
src/adapters/network/: mod.rs
src/adapters/proc/: mod.rs
src/adapters/proc/darwin/: boot.rs  cmdline.rs  fd.rs  filecontext.rs  net.rs  process.rs  resource.rs  socketstate.rs  user.rs
src/adapters/proc/linux/: boot.rs  cmdline.rs  fd.rs  filecontext.rs  mod.rs  net.rs  process.rs  resource.rs  socketstate.rs  user.rs
src/adapters/proc/windows/: boot.rs  cmdline.rs  fd.rs  filecontext.rs  mod.rs  net.rs  process.rs  resource.rs  socketstate.rs  user.rs
src/adapters/source/: container.rs  cron.rs  detect.rs  git.rs  health.rs  mod.rs  network.rs  service.rs  shell.rs  supervisor.rs
src/adapters/source/darwin/: launchd.rs
src/adapters/source/linux/: systemd.rs
src/adapters/source/windows/: service.rs
src/core/: ancestry.rs  color.rs  mod.rs  ports.rs  service.rs  time.rs
src/core/models/: filecontext.rs  mod.rs  process.rs  resource.rs  result.rs  socket.rs  source.rs  target.rs
src/output/: envonly.rs  json.rs  mod.rs  security.rs  short.rs  standard.rs  tree.rs  warnings.rs
src/tui/: app.rs  mod.rs  run.rs  ui.rs
tests/: integration_test.rs
